--- a/ejercicioSettings/app/src/main/res/layout/activity_main.xml
+++ b/ejercicioSettings/app/src/main/res/layout/activity_main.xml
@@ -14,24 +14,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </TableLayout>
+        app:layout_constraintVertical_bias="0.5"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,7 +31,7 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="@string/nombre" />
 
         <EditText
             android:id="@+id/editTextText4"
@@ -74,7 +57,7 @@
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="@string/correo" />
 
         <EditText
             android:id="@+id/editTextTextEmailAddress"
@@ -99,7 +82,7 @@
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="@string/edad" />
 
         <EditText
             android:id="@+id/editTextNumber"
@@ -126,13 +109,8 @@
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="@string/publicidad" />
 
-        <CheckedTextView
-            android:id="@+id/checkedTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CheckedTextView" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
