--- a/ejercicioSettings/app/src/main/res/layout/activity_main.xml
+++ b/ejercicioSettings/app/src/main/res/layout/activity_main.xml
@@ -34,13 +34,12 @@
             android:text="@string/nombre" />
 
         <EditText
-            android:id="@+id/editTextText4"
+            android:id="@+id/idNombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="text"
-            android:minHeight="48dp"
-            android:text="Name" />
+            android:minHeight="48dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -60,12 +59,12 @@
             android:text="@string/correo" />
 
         <EditText
-            android:id="@+id/editTextTextEmailAddress"
+            android:id="@+id/idCorreo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textEmailAddress"
-            android:minHeight="48dp" />
+            android:inputType="text" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -85,7 +84,7 @@
             android:text="@string/edad" />
 
         <EditText
-            android:id="@+id/editTextNumber"
+            android:id="@+id/idEdad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -105,12 +104,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView10"
+        <CheckBox
+            android:id="@+id/publicidad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/publicidad" />
+            android:text="CheckBox" />
 
+        <Button
+            android:id="@+id/guardar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Guardar" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
